<resources>
    <string name="app_name">demo</string>
    <string name="startTimer">Start</string>
    <string name="stopTimer">Reset</string>
    <string name="button_three">Music</string>
    <string name="display_text">NEW TEXT PLS WORK</string>
    <string name="finishText">Finished</string>
    <string name="switch_Off">OFF</string>
    <string name="switch_On">ON</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="your_stats">Your Stats</string>
    <string name="title_activity_settings">Settings</string>
    <string name="use_statistics">use statistics</string>
    <string name="Pomodoro_Count">Pomodoro Count</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="select_music">Select Music</string>
    <string name="rain">Rain</string>
    <string name="coffee_shop">Coffee Shop</string>
    <string name="check_stat">Check Stat</string>
    <string name="work">work</string>
    <string name="no_work">no work</string>
    <string name="send_data">send data</string>
    <string name="count">Count</string>
    <string name="enter_data">Enter data</string>
    <string name="date">Date</string>
    <string name="db_data">db data</string>
    <string name="add_session_data">Add session data</string>
    <string name="music">Music</string>
    <string name="rain_image">rain image</string>
    <string name="coffee_image">coffee image</string>

</resources>
